# VocalTractLab

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
.github/workflows/: deploy-wasm.yml  release.yml  wasm.yml
benchmarks/: README.md  benchmark_data.h.in  synthesis_bench.cpp  wasm_bench.cpp
data/: example01.ges  example01.seg  example01.tube
data/batch/: M01-be002.seg  M01-be003.seg  M01-be005.seg  M01-be007.seg  M01-be009.seg  M01-be011.seg  M01-be012.seg  M01-be013.seg  M01-be015.seg  M01-be018.seg  M01-be020.seg  M01-be021.seg  M01-be024.seg  M01-be025.seg  W01_002.seg  W01_004.seg  W01_006.seg  W01_007.seg  W01_008.seg  W01_009.seg  W01_010.seg  W01_012.seg  W01_013.seg  W01_014.seg  W01_015.seg  W01_016.seg  W01_017.seg  W01_020.seg  W01_023.seg
data/speakers/: JD2.speaker  M01.speaker  W02.speaker
docs/: octagon-tract-design.md  optimization-plan.md  perf-experiments.md  voice-quality-gestures.md
examples/matlab/: example4.m  example6-input.seg  example7-input.seg  valentin.seg
official/API/: VocalTractLabApi.lib  W02.speaker  example1.m  example1.py  example2.m  example3.m  example5.m  example6.m  example7.m
official/API/Developer/: VocalTractLabApi.sln  VocalTractLabApi.vcxproj  VocalTractLabApi.vcxproj.filters
official/API/Developer/Sources/: AnatomyParams.cpp  Constants.cpp  Dsp.h  GeometricGlottis2019.h  Geometry.cpp  GesturalScore.h  Glottis.cpp  IirFilter.h  LfPulse.cpp  LfPulse.h  Splines.cpp  Splines.h  StaticPhone.cpp  StaticPhone.h  Synthesizer.cpp  TdsModel.cpp  TdsModel.h  TimeFunction.cpp  TlModel.h  TriangularGlottis.cpp  TriangularGlottis.h  Tube.h  VocalTract.cpp  VocalTract.h  VoiceQualityEstimator.cpp  XmlHelper.cpp  XmlHelper.h  XmlNode.cpp
official/GUI/: M01.speaker
official/GUI/Developer/: VocalTractLab2.rc  VocalTractLab2.sln  VocalTractLab2.vcxproj  VocalTractLab2.vcxproj.filters
official/GUI/Developer/Sources/Backend/: AnatomyParams.h  Constants.h  Dsp.cpp  F0EstimatorYin.cpp  F0EstimatorYin.h  GeometricGlottis2019.cpp  GeometricGlottis2025.cpp  GeometricGlottis2025.h  GesturalScore.cpp  Glottis.h  IirFilter.cpp  Matrix2x2.cpp  Matrix2x2.h  PoleZeroPlan.cpp  PoleZeroPlan.h  Sampa.cpp  Sampa.h  SegmentSequence.cpp  Signal.cpp  SoundLib.cpp  SoundLib.h  Surface.cpp  Surface.h  Synthesizer.h  TlModel.cpp  Tube.cpp  TubeSequence.h  VocalTract.cpp  VocalTract.h  VocalTractLabApi.cpp  VoiceQualityEstimator.h  XmlHelper.cpp  XmlHelper.h  XmlNode.h
official/GUI/Developer/Sources/Frontend/: AnalysisResultsDialog.cpp  AnalysisResultsDialog.h  AnalysisSettingsDialog.cpp  Data.cpp  (+84 more)
official/GUI/Examples/: M01-be004.seg  M01-be006.seg  M01-be008.seg  M01-be010.seg  M01-be014.seg  M01-be016.seg  M01-be017.seg  M01-be019.seg  M01-be022.seg  M01-be023.seg  W01_001.seg  W01_003.seg  W01_005.seg  W01_011.seg  W01_018.seg  W01_019.seg  W01_021.seg  W01_022.seg  W01_024.seg  W01_025.seg
sources/gui/app/: Application.cpp  Application.h  Data.cpp  Data.h  MainWindow.cpp  SynthesisThread.cpp  SynthesisThread.h
sources/gui/dialogs/: AnalysisResultsDialog.cpp  AnalysisResultsDialog.h  AnalysisSettingsDialog.cpp  AnalysisSettingsDialog.h  AnatomyParamsDialog.h  AnnotationDialog.h  EmaConfigDialog.cpp  EmaConfigDialog.h  FdsOptionsDialog.cpp  FormantOptimizationDialog.cpp  FormantOptimizationDialog.h  GlottisDialog.h  GlottisPanel.h  LfPulseDialog.cpp  LfPulseDialog.h  PhoneticParamsDialog.cpp  PhoneticParamsDialog.h  PoleZeroDialog.cpp  PoleZeroDialog.h  SpectrumOptionsDialog.cpp  SpectrumOptionsDialog.h  TdsOptionsDialog.cpp  TdsOptionsDialog.h  TransitionDialog.cpp  TransitionDialog.h  VocalTractShapesDialog.cpp  VocalTractShapesDialog.h
sources/gui/graphing/: ColorScale.cpp  Graph.cpp  SpectrogramPlot.cpp  SpectrogramPlot.h
sources/gui/pages/: GesturalScorePage.cpp  GesturalScorePage.h  SignalPage.cpp  TdsPage.cpp  VocalTractPage.cpp  VocalTractPage.h
sources/gui/pictures/: AreaFunctionPicture.cpp  AreaFunctionPicture.h  BasicPicture.cpp  CrossSectionPicture.cpp  CrossSectionPicture.h  GesturalScorePicture.cpp  GesturalScorePicture.h  GlottisPicture.cpp  GlottisPicture.h  LfPulsePicture.cpp  LfPulsePicture.h  PoleZeroPlot.cpp  PoleZeroPlot.h  SignalComparisonPicture.cpp  SignalComparisonPicture.h  SignalPicture.cpp  SimpleSpectrumPicture.cpp  SpectrogramPicture.cpp  SpectrumPicture.cpp  SpectrumPicture.h  TdsSpatialSignalPicture.cpp  TdsTimeSignalPicture.cpp  TdsTubePicture.cpp  TdsTubePicture.h  TimeAxisPicture.cpp  TimeAxisPicture.h  VocalTractPicture.h
sources/gui/util/: SilentMessageBox.cpp  Theme.h
sources/live/: AssetPaths.cpp  AssetPaths.h  AudioEngine.cpp  AudioEngine.h  ControlPoints.cpp  ControlPoints.h  ControlsPanel.cpp  ControlsPanel.h  LfPulsePanel.cpp  LfPulsePanel.h  PresetsPanel.cpp  PresetsPanel.h  README.md  SpectrogramPanel.cpp  SpectrogramPanel.h  SpectrumPanel.cpp  SpectrumPanel.h  TractView.cpp  TractView.h  VocalTract2DPanel.cpp  VocalTract2DPanel.h  VocalTract3DPanel.cpp  VocalTract3DPanel.h  VowelChartPanel.cpp  VowelChartPanel.h  main.cpp
sources/live/web/: coi-serviceworker.js  shell.html
sources/vtl/acoustics/: TdsModel.cpp  TdsModel.h  TlModel.cpp  Tube.cpp
sources/vtl/analysis/: F0EstimatorYin.cpp  F0EstimatorYin.h  PoleZeroPlan.cpp  VoiceQualityEstimator.cpp  VoiceQualityEstimator.h
sources/vtl/anatomy/: AnatomyParams.cpp  AnatomyParams.h  Surface.cpp  Surface.h  VocalTract.cpp  VocalTract.h
sources/vtl/api/: VocalTractLabApi.cpp  VocalTractLabApi.def
sources/vtl/core/: Constants.cpp  Geometry.cpp  Geometry.h  Matrix2x2.cpp  TimeFunction.cpp
sources/vtl/dsp/: Dsp.cpp  IirFilter.cpp  IirFilter.h  Signal.cpp
sources/vtl/glottis/: GeometricGlottis2019.cpp  GeometricGlottis2019.h  GeometricGlottis2025.cpp  GeometricGlottis2025.h  Glottis.h  LfPulse.cpp  TriangularGlottis.cpp  TriangularGlottis.h
sources/vtl/io/: SoundLib.cpp  SoundLib.h  XmlHelper.h
sources/vtl/phonetics/: SegmentSequence.h
sources/vtl/synthesis/: GesturalScore.cpp  StaticPhone.cpp  Synthesizer.cpp  Synthesizer.h
tests/: audio_regression_test.cpp  test_data.h.in
tools/: profile.sh
(+83 files in other folders)
